--- a/03_dom_manipulation/index.html
+++ b/03_dom_manipulation/index.html
@@ -1,10 +1,24 @@
 <html>
     <head>
-        
+    <style>
+        body {
+            background: black;
+            color: white;
+            text-align: center;
+        }
+    </style>
     </head>
 
     <body>
         <h1>Hello World!</h1>
+        <div id="first">
+            <h1 class="meow">not the hello world</h1>
+        </div>
+        <span>
+            otherstuff!
+        </span>
+        
+        <span></span>
         <script src="index.js"></script>
     </body>
 </html>
