--- a/04_dom_events_and_forms/index.html
+++ b/04_dom_events_and_forms/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- How do we add our JavaScript? -->
-
+  <script defer src="index.js"></script>
   <link rel="stylesheet" href="styles.css" />
   <title>Pokédex - Starter Code</title>
 </head>
