DONE: end of lecture pm on forms

--- a/04_dom_events_and_forms/index.html
+++ b/04_dom_events_and_forms/index.html
@@ -14,17 +14,17 @@
     <h1>Build a Pokédex</h1>
   </div>
 
-  <!-- <div id="poke-form-container">
+  <div id="poke-form-container">
     <form id="poke-form">
       <label class="form-label"><strong>Name: </strong></label>
-      <input type="text" id="name-input" />
+      <input type="text" id="name-input" name="name" />
 
       <label class="form-label"><strong>Image: </strong></label>
-			<input type="text" id="img-input" />
+      <input type="text" id="img-input" name="img-input" />
 
       <input type="submit" value="Submit" />
     </form>
-  </div> -->
+  </div>
 
   <div id="poke-container">
   </div>
