--- a/09_patch_delete_requests/index.html
+++ b/09_patch_delete_requests/index.html
@@ -9,11 +9,20 @@
     <div id="top-container"></div>
 
     <main>
+        <div>
+            <button>DELETE CAT</button>
+        </div>
+        edit cat info:
+        <form id="update-cat">
+            <input name="name"/>
+            <input name="bio"/>
+            <input type="submit"/>
+        </form>
         <h1 id="name"></h1>
         <h2 id="bio"></h2>
     </main>
     
-    <form>
+    <form id="new-cat">
         <h3>add new cat</h3>
         name: <input name="name"/>
         bio: <input name="bio"/>
